Replace 01_eodag_search.ipynb

--- a/01_eodag_search.ipynb
+++ b/01_eodag_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,15 @@
     "import matplotlib.image as mpimg\n",
     "import folium\n",
     "\n",
-    "\n",
-    "#Temporary\n",
     "from dotenv import dotenv_values\n",
     "\n",
-    "setup_logging(0)"
+    "# Setup Verbose Values:\n",
+    "# 0: no logging and no progress bar\n",
+    "# 1: no logging but progress bars displayed\n",
+    "# 2: log at the INFO level\n",
+    "# 3: log at the DEBUG level (even more information)\n",
+    "\n",
+    "setup_logging(verbose=0)"
    ]
   },
   {
@@ -35,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,20 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create Folders for saving Data, serializing and post processing.\n",
     "\n",
-    "root = 'C:/Users/npikall/eodag-data/'\n",
+    "# Path where the Data should be stored ('c:\\\\Users\\\\theUSER\\\\eodag-data')\n",
+    "root = '../eodag-data/'\n",
     "\n",
-    "workspace_download = root + 'eodag_workspace_download'\n",
-    "workspace_serialize = root + 'eodag_workspace_serialize_deserialize'\n",
-    "workspace_post_process = root + 'eodag_workspace_post_process'\n",
+    "workspace_download = os.path.join(root,'eodag_workspace_download')\n",
+    "workspace_serialize = os.path.join(root,'eodag_workspace_serialize_deserialize')\n",
+    "workspace_post_process = os.path.join(root,'eodag_workspace_post_process')\n",
     "workspaces = [workspace_download, workspace_serialize, workspace_post_process]\n",
     "\n",
     "for ws in workspaces:\n",
+    "    ws = os.path.abspath(ws)\n",
+    "    \n",
     "    if not os.path.isdir(ws):\n",
     "        os.mkdir(ws)\n",
     "        print(f'Created Folder: {ws}')\n",
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
