update notebooks, add requir., add third notebook

--- a/02_eodag_des_post.ipynb
+++ b/02_eodag_des_post.ipynb
@@ -22,7 +22,6 @@
     "from rioxarray.merge import merge_arrays\n",
     "\n",
     "from dotenv import dotenv_values\n",
-    "#from functions import *\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -382,6 +381,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plotting the True Color Image (TCI)\n",
     "ds['TCI'].loc[ds['TCI'].time[1]].plot.imshow()"
    ]
@@ -463,20 +471,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Classification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Saving xarrays to netCDF Files"
    ]
   },
@@ -495,12 +489,13 @@
    "source": [
     "# Create Folder for NetCDF Files\n",
     "\n",
-    "# nc_path = '/'.join([workspace_post_process, 'eodag_netCDF'])\n",
-    "# if not os.path.isdir(nc_path):\n",
-    "#     os.mkdir(nc_path)\n",
-    "#     print(f'Created Folder: {nc_path}')\n",
-    "# else:\n",
-    "#     print(f'Folder already exists: {nc_path}')"
+    "nc_path = os.path.join(workspace_post_process, 'eodag_netCDF')\n",
+    "\n",
+    "if not os.path.isdir(nc_path):\n",
+    "    os.mkdir(nc_path)\n",
+    "    print(f'Created Folder: {os.path.abspath(nc_path)}')\n",
+    "else:\n",
+    "    print(f'Folder already exists: {os.path.abspath(nc_path)}')"
    ]
   },
   {
@@ -510,7 +505,18 @@
    "outputs": [],
    "source": [
     "# Save Xarray as NetCDF\n",
-    "# img_arr.to_netcdf(os.path.join(nc_path, 'image1.nc'), mode='w')"
+    "file_path = os.path.join(nc_path, 'dataset.nc')\n",
+    "\n",
+    "if not os.path.isfile(file_path):\n",
+    "    # If File not existing, then write the File\n",
+    "    ds.to_netcdf(file_path, mode='w')\n",
+    "else:\n",
+    "    # If File is existing, then delete and write again.\n",
+    "    os.remove(file_path)\n",
+    "    ds.to_netcdf(file_path, mode='w')\n",
+    "\n",
+    "# OR Append netCDF File with:\n",
+    "# ds.to_netcdf(file_path, mode='a')"
    ]
   }
  ],
@@ -530,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
