--- a/01_eodag_search.ipynb
+++ b/01_eodag_search.ipynb
@@ -8,12 +8,14 @@
    "source": [
     "#Imports\n",
     "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "import numpy as np\n",
+    "import folium\n",
+    "\n",
     "from eodag import EODataAccessGateway\n",
     "from eodag import setup_logging\n",
     "from eodag.crunch import FilterProperty\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
-    "import folium\n",
     "\n",
     "from dotenv import dotenv_values\n",
     "\n",
@@ -269,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
