first commit to branch, Setup Notebook 03

--- a/03_eodag_nc_post.ipynb
+++ b/03_eodag_nc_post.ipynb
@@ -36,7 +36,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classifying\n"
+    "# Classifying\n",
+    "This Notebook intends to show some examples of classifications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Retrieval\n",
+    "The first Lines of Code, which essentialy load the data are not explained, since the Notebooks 01 and 02 do that."
    ]
   },
   {
@@ -74,6 +83,201 @@
     "    else:\n",
     "        print(f'Folder already exists: {ws}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Configure\n",
+    "#Create EODAG Object and set preferred Provider\n",
+    "dag = EODataAccessGateway()\n",
+    "dag.set_preferred_provider(\"cop_dataspace\") # Copernicus Data Space Ecosystem\n",
+    "\n",
+    "dag.update_providers_config(f\"\"\"\n",
+    "    cop_dataspace:\n",
+    "        download:\n",
+    "            outputs_prefix: {os.path.abspath(workspace_download)}\n",
+    "        auth:\n",
+    "            credentials:\n",
+    "                username: {secrets['USER_KEY']}\n",
+    "                password: {secrets['USER_SECRET']}\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Deserialize the Search Results\n",
+    "output_file = os.path.join(workspace_serialize, \"search_results.geojson\")\n",
+    "deserialized_search_results = dag.deserialize_and_register(output_file)\n",
+    "\n",
+    "print(f\"Got {len(deserialized_search_results)} deserialized products.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Single Product\n",
+    "product = deserialized_search_results[2]\n",
+    "path = dag.download(product)\n",
+    "\n",
+    "# Download multiple Products\n",
+    "products = deserialized_search_results[1:3]\n",
+    "paths = dag.download_all(products)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set Boundingbox for Area inside the Tile.\n",
+    "latmin, latmax = 48.1, 48.35\n",
+    "lonmin, lonmax = 16.1, 16.6\n",
+    "extent = {'lonmin': lonmin, 'latmin': latmin, 'lonmax': lonmax, 'latmax': latmax}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting common Parameters for all further image processing\n",
+    "common_params = dict(\n",
+    "    crs=CRS.from_epsg(4326),               # the downloaded images are in 4326, don't reproject them\n",
+    "    resolution=0.0006,                     # but lower their resolution (0.0006 should be 60m in 100km)\n",
+    "    extent=(lonmin,latmin,lonmax,latmax)   # and zoom over/crop the area of interest\n",
+    ")\n",
+    "\n",
+    "# Define basic Functions for future operations\n",
+    "def normalized_difference(a, b):\n",
+    "    return (a - b*1.)/(a + b)\n",
+    "\n",
+    "def normalize(a):\n",
+    "    return (a - a.min())/(a.max() - a.min())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get a list of all available Bands (assets)\n",
+    "def get_assets(root:str, res=60):\n",
+    "    jp2_files = [file for dirs in os.walk(root, topdown=True)\n",
+    "                     for file in dirs[2] if file.endswith(f\"_{res}m.jp2\")]\n",
+    "    assets = [file.split('_')[2] for file in jp2_files if file.startswith('T')]\n",
+    "    return assets\n",
+    "    \n",
+    "    \n",
+    "assets = get_assets(path, res=10)\n",
+    "assets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Functions for loading data into datasets.\n",
+    "\n",
+    "def load_single_product(product, bands:list):\n",
+    "    loaded_data = {}\n",
+    "\n",
+    "    for band in bands:\n",
+    "        data = product.get_data(band=band, **common_params)\n",
+    "        data = data.squeeze()\n",
+    "\n",
+    "        time_str = product.properties['startTimeFromAscendingNode']\n",
+    "        date = dt.datetime.strptime(time_str,'%Y-%m-%dT%H:%M:%S.%f%z')\n",
+    "\n",
+    "        data = data.expand_dims(dim={'time':[date.date()]})\n",
+    "        data.name = band\n",
+    "        loaded_data[band] = data\n",
+    "    ds = xr.Dataset(loaded_data)\n",
+    "    return ds\n",
+    "\n",
+    "def load_multiple_timestamps(products, bands:list):\n",
+    "    loaded_data = {}\n",
+    "\n",
+    "    for band in bands:\n",
+    "        single_band_ts = []\n",
+    "        for prod in products:\n",
+    "            data = prod.get_data(band=band, **common_params)\n",
+    "            data = data.squeeze()\n",
+    "\n",
+    "            time_str = prod.properties['startTimeFromAscendingNode']\n",
+    "            date = dt.datetime.strptime(time_str,'%Y-%m-%dT%H:%M:%S.%f%z')\n",
+    "\n",
+    "            data = data.expand_dims(dim={'time':[date.date()]})\n",
+    "            data.name = band\n",
+    "            single_band_ts.append(data)\n",
+    "        ts =  xr.concat(single_band_ts, dim='time')\n",
+    "        loaded_data[band] = ts   \n",
+    "\n",
+    "    ds = xr.Dataset(loaded_data)\n",
+    "    return ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First Classifaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading multiple Bands into a dataset with multiple Timestamps\n",
+    "ds = load_multiple_timestamps(products=products, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
