--- a/00_xarray-tutorial.ipynb
+++ b/00_xarray-tutorial.ipynb
@@ -137,6 +137,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Timeseries in xarray"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Different Merging Operations"
    ]
   },
