--- a/03_eodag_img_pro.ipynb
+++ b/03_eodag_img_pro.ipynb
@@ -13,6 +13,7 @@
     "import xarray as xr\n",
     "import folium\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import datetime as dt\n",
     "\n",
     "from eodag import EODataAccessGateway\n",
@@ -212,31 +213,26 @@
     "\n",
     "def load_multiple_timestamps(products, bands:list):\n",
     "    loaded_data = {}\n",
-    "\n",
+    "    # Combine multiple Dataarrays into one Dataset\n",
     "    for band in bands:\n",
     "        single_band_ts = []\n",
-    "        for prod in products:\n",
+    "        # Load one Band of each product and concat them into an xarray Dataarray\n",
+    "        for prod in products: \n",
     "            data = prod.get_data(band=band, **common_params)\n",
     "            data = data.squeeze()\n",
     "\n",
-    "            time_str = prod.properties['startTimeFromAscendingNode']\n",
-    "            date = dt.datetime.strptime(time_str,'%Y-%m-%dT%H:%M:%S.%f%z')\n",
+    "            time_str = prod.properties['startTimeFromAscendingNode'][:-1] #Remove Timezone info\n",
+    "            date = pd.to_datetime([time_str])\n",
     "\n",
-    "            data = data.expand_dims(dim={'time':[date.date()]})\n",
+    "            data = data.expand_dims(time=date)\n",
     "            data.name = band\n",
     "            single_band_ts.append(data)\n",
+    "            \n",
     "        ts =  xr.concat(single_band_ts, dim='time')\n",
     "        loaded_data[band] = ts   \n",
     "\n",
     "    ds = xr.Dataset(loaded_data)\n",
     "    return ds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## First Classifaction"
    ]
   },
   {
@@ -247,6 +243,73 @@
    "source": [
     "# Loading multiple Bands into a dataset with multiple Timestamps\n",
     "ds = load_multiple_timestamps(products=products, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Image Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### False Color Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select a single Timestamp from the Dataset (both of the following methods work)\n",
+    "\n",
+    "single_image = ds.sel(time=dt.datetime(2023, 3, 16), method='nearest')\n",
+    "#single_image = ds.sel(time='2023-03-16', method='nearest')\n",
+    "\n",
+    "#single_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading the differnt Bands for the False Color Image\n",
+    "b02 = single_image['B02'].values #blue values\n",
+    "b03 = single_image['B03'].values #green values\n",
+    "b08 = single_image['B08'].values #NIR values\n",
+    "\n",
+    "# Stacking the Bands into a numpy array, which can be interpreted as an RGB Image.\n",
+    "fc_img = np.stack([b08, b03, b02], axis=2)\n",
+    "fc_img = normalize(fc_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.imshow(fc_img)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classifiying"
    ]
   },
   {
