updated git tutorial

--- a/00_git-tutorial.ipynb
+++ b/00_git-tutorial.ipynb
@@ -19,6 +19,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Basic Commands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`git init` to create a git repo\n",
+    "\n",
+    "`git add myFile` to put files in the stage'ing state (prepareing them for the commit)\n",
+    "\n",
+    "`git commit -m \"commit message\"` to commit all staged files with an apropriate commit message\n",
+    "\n",
+    "`git commit -a -m \"commit message\"` to add and commit all modified files\n",
+    "\n",
+    "`git clone https://github.com/myproject` to clone a repository\n",
+    "\n",
+    "`git push` to save local changes to remote repository\n",
+    "\n",
+    "`git pull` to load newest version from remote repository\n",
+    "\n",
+    "`git status` to see the status of your files\n",
+    "\n",
+    "`git log` shows the previous commits\n",
+    "\n",
+    "`git checkout mybranch` changes to another branch and with  `-b my branch` creates and switches to that branch\n",
+    "\n",
+    "`git branch` creates a new branch, with `-d` branch gets deleted\n",
+    "\n",
+    "`git merge mybranch` branch wird in master branch integriert"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## General idea of git"
    ]
   },
@@ -176,26 +212,6 @@
     "Sometimes you don't want Git to show you some files. Then you can create a new file in your directory called `.gitignore`.\n",
     "In each line of this file ther should be some kind of filename, which you want git to ignore. There are a few shortcuts for \n",
     "files with the same ending, but for that checkout the Git Book on page 32."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Basic Commands"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`git init` to create a git repo\n",
-    "\n",
-    "`git add myFile` to put files in the stage'ing state (prepareing them for the commit)\n",
-    "\n",
-    "`git commit -m \"commit message\"` to commit all staged files with an apropriate commit message\n",
-    "\n",
-    "`git commit -a -m \"commit message\"` to add and commit all modified files"
    ]
   },
   {
