error in 03 Notebook

--- a/02_eodag_des_post.ipynb
+++ b/02_eodag_des_post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,8 @@
     "\n",
     "from eodag import EODataAccessGateway\n",
     "from eodag import setup_logging\n",
+    "from eodag.crunch import FilterProperty\n",
+    "\n",
     "\n",
     "from rasterio.crs import CRS\n",
     "from rioxarray.merge import merge_arrays\n",
@@ -163,6 +165,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = [p for p in products if \"N0500\" in p.as_dict()[\"id\"]]\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -177,12 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download Single Product\n",
-    "product = deserialized_search_results[2]\n",
-    "path = dag.download(product)\n",
-    "\n",
     "# Download multiple Products\n",
-    "products = deserialized_search_results[1:3]\n",
+    "products = deserialized_search_results\n",
     "paths = dag.download_all(products)\n"
    ]
   },
@@ -198,7 +205,7 @@
     "extent = {'lonmin': lonmin, 'latmin': latmin, 'lonmax': lonmax, 'latmax': latmax}\n",
     "\n",
     "# Folium Map\n",
-    "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9)\n",
+    "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9, tiles='OpenStreetMap')\n",
     "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
     "folium.GeoJson(\n",
     "    data=deserialized_search_results[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
@@ -251,8 +258,8 @@
    "outputs": [],
    "source": [
     "# Load Bands 4 and 8 into memory\n",
-    "RED = product.get_data(band=\"B04\", **common_params)\n",
-    "NIR = product.get_data(band=\"B08\", **common_params)\n",
+    "RED = products[0].get_data(band=\"B04\", **common_params)\n",
+    "NIR = products[0].get_data(band=\"B08\", **common_params)\n",
     "\n",
     "NDVI = normalized_difference(NIR, RED)"
    ]
@@ -306,7 +313,7 @@
     "    return assets\n",
     "    \n",
     "    \n",
-    "assets = get_assets(path, res=10)\n",
+    "assets = get_assets(paths[0], res=10)\n",
     "assets"
    ]
   },
@@ -335,26 +342,13 @@
     "    return ds\n",
     "\n",
     "def load_multiple_timestamps(products, bands:list):\n",
-    "    loaded_data = {}\n",
-    "    # Combine multiple Dataarrays into one Dataset\n",
-    "    for band in bands:\n",
-    "        single_band_ts = []\n",
-    "        # Load one Band of each product and concat them into an xarray Dataarray\n",
-    "        for prod in products: \n",
-    "            data = prod.get_data(band=band, **common_params)\n",
-    "            data = data.squeeze()\n",
+    "    single_ds = []\n",
+    "    for product in products:\n",
+    "        single_product = load_single_product(product=product, bands=bands)\n",
+    "        single_ds.append(single_product)\n",
     "\n",
-    "            time_str = prod.properties['startTimeFromAscendingNode'][:-1] #Remove Timezone info\n",
-    "            date = pd.to_datetime([time_str])\n",
-    "\n",
-    "            data = data.expand_dims(time=date)\n",
-    "            data.name = band\n",
-    "            single_band_ts.append(data)\n",
-    "            \n",
-    "        ts =  xr.concat(single_band_ts, dim='time')\n",
-    "        loaded_data[band] = ts   \n",
-    "\n",
-    "    ds = xr.Dataset(loaded_data)\n",
+    "    #ds = xr.merge(single_ds)\n",
+    "    ds = xr.combine_by_coords(single_ds)\n",
     "    return ds"
    ]
   },
@@ -363,10 +357,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Loading multiple Bands into a dataset\n",
-    "ds1 = load_single_product(product=product, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -375,15 +366,10 @@
    "outputs": [],
    "source": [
     "# Loading multiple Bands into a dataset with multiple Timestamps\n",
-    "ds = load_multiple_timestamps(products=products, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bands_to_load = get_assets(paths[0], res=10)[1:-1]\n",
+    "print(bands_to_load)\n",
+    "\n",
+    "ds = load_multiple_timestamps(products=products, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])\n",
     "ds"
    ]
   },
@@ -419,56 +405,6 @@
     "single_img = ds.sel(time=dt.date(2023, 3, 16), method='nearest')\n",
     "single_img"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Merging of Arrays"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this example two geographicaly overlapping images are merged, and the NDVI is calculated. Note that only Dataarrays are merged but not Datasets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load Data of Bands 4 and 8. The Images are from the same time, but different tiles.\n",
-    "RED_1 = deserialized_search_results[2].get_data(band=\"B04\", **common_params)\n",
-    "RED_2 = deserialized_search_results[3].get_data(band=\"B04\", **common_params)\n",
-    "\n",
-    "NIR_1 = deserialized_search_results[2].get_data(band=\"B08\", **common_params)\n",
-    "NIR_2 = deserialized_search_results[3].get_data(band=\"B08\", **common_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Using merge_arrays returns the geospatially merged data.\n",
-    "merged_red = merge_arrays([RED_1, RED_2], method='max') # methods = ['first', 'last', 'min', 'max', 'sum', 'count']\n",
-    "merged_nir = merge_arrays([NIR_1, NIR_2], method='max')\n",
-    "\n",
-    "merged_ndvi = normalized_difference(merged_nir, merged_red)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_ndvi.plot(cmap='RdYlGn', center=False, size=6, aspect='auto')"
-   ]
   }
  ],
  "metadata": {
@@ -487,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
