--- a/03_eodag_img_pro.ipynb
+++ b/03_eodag_img_pro.ipynb
@@ -37,15 +37,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classifying\n",
-    "This Notebook intends to show some examples of classifications."
+    "# Image Processing\n",
+    "This Notebook intends to show some examples of image processing."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data RetrievalAcquisition\n",
+    "## Data Retrieval/Acquisition\n",
     "The first Lines of Code, which essentialy load the data are not explained, since the Notebooks 01 and 02 do that."
    ]
   },
@@ -126,12 +126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download Single Product\n",
-    "product = deserialized_search_results[2]\n",
-    "path = dag.download(product)\n",
-    "\n",
     "# Download multiple Products\n",
-    "products = deserialized_search_results[1:3]\n",
+    "products = deserialized_search_results\n",
     "paths = dag.download_all(products)\n"
    ]
   },
@@ -183,7 +179,7 @@
     "    return assets\n",
     "    \n",
     "    \n",
-    "assets = get_assets(path, res=10)\n",
+    "assets = get_assets(paths[0], res=10)\n",
     "assets"
    ]
   },
@@ -246,10 +242,196 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Image Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stacking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to display an array, the array needs to have either one or three channels. If there is one color channel the image or array will be displayed as a *black and white* (greyscale) image, but any colormap can be chosen. If the array has three colors each \"layer\" will be interpreted as one of the RGB colors.\n",
+    "\n",
+    "In this example a single image from the dataset is chosen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Bands 4 and 8 into memory\n",
+    "RED = products[0].get_data(band=\"B04\", **common_params)\n",
+    "NIR = products[0].get_data(band=\"B08\", **common_params)\n",
+    "\n",
+    "NDVI = normalized_difference(NIR, RED)\n",
+    "\n",
+    "NDVI.plot(cmap=\"RdYlGn\", center=False, size=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select a single Timestamp from the Dataset (both of the following methods work)\n",
+    "single_image = ds.sel(time=dt.datetime(2023, 3, 18), method='nearest')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then the individual bands are extracted from the dataarray and stacked to create an array with shape (x,y,3). Note that Numpy interpretes the first array as red the second as green and the third as blue. It might be natural to stack the bands like that `[b02, b03, b04]`, but this will lead to wrong color interpretations. The Axis defines where the bands should be stacked. If the axis is not set to 2 then the output array will have the shapes (3,x,y) or (x,3,y), both of which will not be properly interpreted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b02 = single_image['B02'].values #blue values\n",
+    "b03 = single_image['B03'].values #green values\n",
+    "b04 = single_image['B04'].values #red values\n",
+    "\n",
+    "rgb_raw = np.stack([b04, b03, b02], axis=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the image can be plotted useing ``matplotlib``. Here the aspect ratio is set to 2, as the longitude (lon) coordinates range from -180 to 180 but the latitude (lat) coordinates just from -90 to 90. Therefore 1° in lon would be similar in lenght to 2° lat."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Image\n",
+    "fig, ax = plt.subplots(figsize=(8,8))\n",
+    "ax.imshow(rgb_raw, aspect=2)\n",
+    "ax.set_title(\"rgb raw\")\n",
+    "ax.set_axis_off()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can clearly see the contrast of the image is very low, which makes it appear very dark. Therefore it is helpful to have a look at the Histograms of the image, to properly get a higher contrast."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Histogram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function for plotting an Histogram\n",
+    "\n",
+    "def histogram(arr, nbins=300, alpha=0.5, figsize=(5,5), title='Histogram'):\n",
+    "    #Flatten\n",
+    "    flat_r = arr[:, :, 0].flatten()\n",
+    "    flat_g = arr[:, :, 1].flatten()\n",
+    "    flat_b = arr[:, :, 2].flatten()\n",
+    "\n",
+    "    # You can set the number of bins and alpha individually\n",
+    "    mbins = np.linspace(np.nanmin(arr), np.nanmax(arr), nbins)\n",
+    "\n",
+    "    # Plot \n",
+    "    fig, ax = plt.subplots(figsize=figsize)\n",
+    "    ax.hist(flat_r, color='red', bins=mbins, alpha=alpha)\n",
+    "    ax.hist(flat_g, color='green', bins=mbins,  alpha=alpha)\n",
+    "    ax.hist(flat_b, color='blue', bins=mbins,  alpha=alpha)\n",
+    "\n",
+    "    ax.set_title(title)\n",
+    "    ax.set_xlabel('I')\n",
+    "    ax.set_ylabel('n')\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#single_image['TCI'].plot.imshow()\n",
+    "\n",
+    "single_image['B02'].plot.imshow()\n",
+    "np.unique(single_image['B02'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_image['TCI'].plot.imshow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histogram(rgb_raw, nbins=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Contrast"
    ]
   },
   {
@@ -322,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
