--- a/01_eodag_search.ipynb
+++ b/01_eodag_search.ipynb
@@ -133,11 +133,11 @@
     "search_results, total_count = dag.search(\n",
     "    productType='S2_MSI_L2A',\n",
     "    provider='cop_dataspace',\n",
-    "    #geom=extent,\n",
-    "    tileIdentifier=\"33UXP\",\n",
-    "    start='2023-03-14',\n",
-    "    end='2023-03-21',\n",
-    "    cloudCover=100 #You can specify cloudcover here or later when filtering.\n",
+    "    geom=extent,\n",
+    "    #tileIdentifier=\"33UXP\",\n",
+    "    start='2023-04-09',\n",
+    "    end='2023-04-24',\n",
+    "    cloudCover=80 #You can specify cloudcover here or later when filtering.\n",
     ")\n",
     "\n",
     "print(f\"Got {len(search_results)} products and an estimated total number of {total_count} products.\")"
@@ -253,6 +253,13 @@
     "    filename=output_file\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -271,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
